# SuperTicTacToe

./: CMakeLists.txt  LICENSE  README.md  makefile
headers/: game_handler.h  game_input.h  game_renderer.h  layout_manager.h
src/: game_handler.c  game_input.c  game_renderer.c  layout_manager.c  main.c
